Add if condition for avatar

--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1>Welcome Dear {{ profile.user }}</h1>
-    <img src="{{ profile.avatar.url }}" alt="User Avatar" height="100" width="100">
+    {% if profile.avatar %}
+        <img src="{{ profile.avatar.url }}" alt="User Avatar" height="100" width="100">
+    {% endif %}
     <p>name: {{ profile.user.first_name }}</p>
     <p>last name: {{ profile.user.last_name }}</p>
     <p>email: {{ profile.user.email }}</p>
